# Endfield-ocr-core

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml
src/endfield_ocr_core/: get_number.py  preprocess.py  regions.py  split_image.py
src/endfield_ocr_core/config/: valley.toml  wuling.toml
src/endfield_ocr_core/models/: region_not_found.py
